<resources>
    <string name="app_name">My Bakery</string>
    <string name="dialog_msg_loading">Đang tải…</string>
    <string name="up_product">Sản phẩm</string>
    <string name="up_basket">Giỏ hàng</string>
    <string name="up_favorite">Yêu thích</string>
    <string name="up_news">Tin tức</string>
    <string name="up_settings">Cài đặt</string>
    <string name="up_contact">Liên hệ</string>
    <string name="up_support">Hỗ trợ</string>

    <string name="cap_open">Mở</string>
    <string name="cap_close">Đóng</string>
    <string name="double_back_to_exit">Nhấn lần nữa để thoát!</string>
    <string name="text_fb_login">Đăng nhập bằng Facebook</string>
    <string name="text_google_login">Đăng nhập bằng Google</string>
    <string name="low_or">hoặc</string>
    <string name="up_email">Email</string>
    <string name="up_password">Mật khẩu</string>
    <string name="up_remember_password">Nhớ mật khẩu</string>
    <string name="up_forgot_password">Quên mật khẩu?</string>
    <string name="up_login">ĐĂNG NHẬP</string>
    <string name="up_sign_in">Đăng nhập</string>
    <string name="up_lastname">Họ</string>
    <string name="up_firstname">Tên</string>
    <string name="up_phone_number">Số điện thoại</string>
    <string name="up_address">Địa chỉ</string>
    <string name="text_confirm_term_of_use"><![CDATA[Tôi đã đọc & đồng ý với điều khoản]]></string>
    <string name="up_register">ĐĂNG KÝ</string>
    <string name="text_query_hint">Tìm kiếm sản phẩm</string>
    <string name="up_more">THÊM</string>
    <string name="unit_percent">%</string>
    <string name="unit_vnd">VNĐ</string>
    <string name="up_description">Mô tả</string>
    <string name="text_product_description">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</string>
    <string name="text_comment_hint">Đánh giá của bạn</string>
    <string name="up_post">ĐĂNG</string>
    <string name="up_rating_count">Đánh giá (5)</string>
    <string name="up_total">Tổng cộng</string>
    <string name="up_coupon">Mã giảm giá</string>
    <string name="cap_discount">Giảm giá</string>
    <string name="up_your_pay">Bạn phải trả</string>
    <string name="up_continue">TIẾP TỤC</string>
    <string name="text_fullname_hint"><![CDATA[Họ & Tên]]></string>
    <string name="up_fullname"><![CDATA[Họ & Tên]]></string>
    <string name="up_pay">THANH TOÁN</string>
    <string name="up_payment_method">Phương thức thanh toán</string>
    <string name="up_cast">Tiền mặt</string>
    <string name="up_atm">Thẻ tín dụng</string>
    <string name="up_confirm">XÁC NHẬN</string>
    <string name="up_setting_allow_notification">Cho phép nhận thông báo</string>
    <string name="app_version">Version: 1.0</string>
    <string name="up_hot_line">HOT LINE</string>
    <string name="up_email_support">Gửi email hỗ trợ</string>
    <string name="up_policy_customer_card">Chính sách thẻ khách hàng</string>
    <string name="up_shopping_guide">Hướng dẫn mua hàng</string>
    <string name="up_payments">Hình thức thanh toán</string>
    <string name="up_product_return">Đổi trả sản phẩm</string>
    <string name="up_rules">Điều khoản</string>
    <string name="up_about_us">Về chúng tôi</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="up_payment">Thanh toán</string>
    <string name="up_cancel">HỦY</string>
    <string name="title_dialog_payment_method">Thanh toán</string>
    <string name="error_fullname_invalid"><![CDATA[Họ & Tên không chứa ký tự đặc biệt và số]]></string>
    <string name="error_email_invalid">Email không đúng định dạng</string>
    <string name="error_phone_invalid">Số điện thoại không đúng định dạng</string>
    <string name="error_address_invalid">Địa chỉ không được để trống</string>
    <string name="error_fullname_empty"><![CDATA[Họ & Tên không được để trống]]></string>
    <string name="error_email_empty">Email không được để trống</string>
    <string name="error_phone_empty">Số điện thoại không được để trống</string>
    <string name="up_error_found">Có lỗi xảy ra</string>
    <string name="up_connection_timeout">Hết thời gian chờ!</string>
    <string name="up_ok">OK</string>
    <string name="activity_main_dialog_getoptionsfail">Please check your connection</string>
    <string name="up_tryagain">TRY AGAIN</string>
    <string name="title_activity_product_detail_addcartsuccess">Thêm vào giỏ hàng thành công</string>
    <string name="up_password_confirm">Xác thực mật khẩu</string>
    <string name="error_password_empty">Mật khẩu không được để trống</string>
    <string name="error_password_invalid">Mật khẩu chỉ được bao gồm Ký Tự Thường (a-z), Ký Tự Hoa (A-Z) và Chữ Số (0-9)</string>
    <string name="error_password_confirm_wrong">Xác thực mật khẩu không trùng khớp</string>
    <string name="error_login">Sai email hoặc mật khẩu</string>
    <string name="up_logout">ĐĂNG XUẤT</string>
    <string name="dialog_logout">Bạn có muốn đăng xuất?</string>
    <string name="up_yes">CÓ</string>
    <string name="up_no">KHÔNG</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_product_detail_showreview">Xem đánh giá</string>
    <string name="cap_name">Tên</string>
    <string name="cap_email">Email</string>
    <string name="title_activity_product_detail_reviewpostsuccess">Đăng đánh giá thành công</string>
    <string name="title_activity_product_detail_reviewpostfail">Lỗi kết nối</string>
    <string name="fragment_product_review_noreview">Chưa có đánh giá nào cho sản phẩm này</string>
    <string name="dialog_sendorder_title">ĐÃ GỬI ĐƠN HÀNG</string>
    <string name="dialog_senđorder_message">Đơn hàng của bạn đã được chuyển đến nhân viên của chúng tôi, chúng tôi sẽ xác nhận lại đơn hàng và liên hệ trong thời gian sớm nhất</string>
    <string name="up_close">ĐÓNG</string>
    <string name="cap_productinfo">Thông tin sản phẩm</string>
    <string name="cap_review">Đánh giá</string>
    <string name="cap_from">Từ</string>
    <string name="up_search">TÌM KIẾM</string>
    <string name="title_activity_product_search_hint">Vui lòng nhập tên sản phẩm</string>
    <string name="cap_nomatchedresult">Không tìm thấy sản phẩm phù hợp</string>
    <string name="cap_productsearch">Tìm kiếm sản phẩm</string>
    <string name="cap_login">Đăng nhập</string>
    <string name="cap_register">Đăng ký</string>
    <string name="cap_product_preview">Đánh giá và nhận xét</string>
    <string name="up_notifications">Thông báo</string>
    <string name="cap_payment_confirm">Xác nhận thanh toán</string>
</resources>
