<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="asia.covisoft.bsandroid.fragment.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/main_logo"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:orientation="vertical"
                android:visibility="gone">

                <Button
                    android:id="@+id/btnFBLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_fb_login" />

                <Button
                    android:id="@+id/btnGoogleLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_google_login" />

                <asia.covisoft.bsandroid.wawidget.WATextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_16dp"
                    android:text="@string/low_or"
                    android:textColor="@color/colorTextPrimary" />

            </LinearLayout>


            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_8dp"
                android:hint="@string/up_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_8dp"
                android:hint="@string/up_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edtPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_8dp"
                android:hint="@string/up_password_confirm"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_8dp">

                <EditText
                    android:id="@+id/edtLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin_2dp"
                    android:layout_marginRight="@dimen/margin_2dp"
                    android:layout_weight="0.3"
                    android:hint="@string/up_lastname"
                    android:inputType="textPersonName"/>

                <EditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_2dp"
                    android:layout_marginStart="@dimen/margin_2dp"
                    android:layout_weight="0.7"
                    android:hint="@string/up_firstname"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_8dp"
                android:hint="@string/up_phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_8dp"
                android:hint="@string/up_address"
                android:inputType="textPostalAddress" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_8dp"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/spnCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    tools:ignore="RtlHardcoded" />

                <CheckBox
                    android:id="@+id/chkConfirmTerm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:text="@string/text_confirm_term_of_use"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <asia.covisoft.bsandroid.wawidget.WAButton
                android:id="@+id/btnRegister"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp"
                android:text="@string/up_register" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
