<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_shipping_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="asia.covisoft.bsandroid.activity.ShippingInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/tool_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin_5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtLastName"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.3"
                    android:hint="@string/up_lastname"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edtFirstName"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.7"
                    android:hint="@string/up_firstname"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <EditText
                android:id="@+id/edtEmail"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/up_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edtPhone"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/up_phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/edtAddress"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/up_address"
                android:inputType="textPostalAddress" />

        </LinearLayout>

        <asia.covisoft.bsandroid.wawidget.WAButton
            android:id="@+id/btnPay"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSoftRed"
            android:text="@string/up_pay" />

    </LinearLayout>

</FrameLayout>
