<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="asia.covisoft.bsandroid.fragment.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/main_logo"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:orientation="vertical"
                android:visibility="gone">

                <Button
                    android:id="@+id/btnFBLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_fb_login" />

                <Button
                    android:id="@+id/btnGoogleLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_google_login" />

                <asia.covisoft.bsandroid.wawidget.WATextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_16dp"
                    android:text="@string/low_or"
                    android:textColor="@color/colorTextPrimary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_mail_black_36dp" />

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/up_email"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_lock_outline_black_36dp" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/up_password"
                    android:inputType="textPassword" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_8dp">

                <CheckBox
                    android:id="@+id/chkRememberPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_weight="0.5"
                    android:text="@string/up_remember_password"
                    android:visibility="invisible"
                    tools:ignore="RtlHardcoded" />

                <asia.covisoft.bsandroid.wawidget.WAButton
                    android:id="@+id/btnForgotPassword"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_weight="0.5"
                    android:text="@string/up_forgot_password"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <asia.covisoft.bsandroid.wawidget.WAButton
                android:id="@+id/btnLogin"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/up_login" />

            <asia.covisoft.bsandroid.wawidget.WAButton
                android:id="@+id/btnRegister"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/up_register"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
