<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="asia.covisoft.bsandroid.fragment.PaymentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/tool_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <asia.covisoft.bsandroid.wawidget.WATextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/up_total"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/textsize_16sp" />

            <asia.covisoft.bsandroid.wawidget.WATextView
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding_8dp"
                android:text="000.000 VNĐ"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/textsize_22sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <asia.covisoft.bsandroid.wawidget.WATextView
                        style="@style/TextViewTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/up_payment_method" />

                    <RadioGroup
                        android:id="@+id/rdoPaymentMethod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_8dp">

                        <RadioButton
                            android:id="@+id/rdoCast"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/up_cast" />

                        <RadioButton
                            android:id="@+id/rdoAtm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/up_atm" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rvAtm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>


        <Button
            android:id="@+id/btnConfirm"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorSoftRed"
            android:text="@string/up_confirm" />

    </LinearLayout>


</FrameLayout>
