<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="asia.covisoft.bsandroid.fragment.CartFragment">

    <LinearLayout
        android:id="@+id/llBasket"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <asia.covisoft.bsandroid.wawidget.WATextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/up_total"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="@dimen/textsize_14sp" />

                        <asia.covisoft.bsandroid.wawidget.WATextView
                            android:id="@+id/tvTotal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="end"
                            android:text="@string/unit_vnd"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="@dimen/textsize_14sp"
                            tools:ignore="HardcodedText" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_4dp">

                    <EditText
                        android:id="@+id/edtCoupon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:hint="@string/up_coupon"
                        android:inputType="text" />

                    <ImageView
                        android:id="@+id/imgCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_remove_circle_red_500_24dp"
                        android:visibility="invisible"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_4dp">

                    <asia.covisoft.bsandroid.wawidget.WATextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/cap_discount"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/textsize_14sp" />

                    <asia.covisoft.bsandroid.wawidget.WATextView
                        android:id="@+id/tvDiscountRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/textsize_14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_4dp">

                    <asia.covisoft.bsandroid.wawidget.WATextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/up_your_pay"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/textsize_18sp" />

                    <asia.covisoft.bsandroid.wawidget.WATextView
                        android:id="@+id/tvPay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/textsize_18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvProducts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:listitem="@layout/list_item_product_cart" />

        <asia.covisoft.bsandroid.wawidget.WAButton
            android:id="@+id/btnContinue"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/up_continue" />

    </LinearLayout>

</FrameLayout>
